kube/rdb_svc.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: rdb-svc
  labels:
    app: rdb-svc
spec:
  selector:
    app: rdb
  type: ClusterIP
  ports: 
    - name: http1
      protocol: TCP
      port: 84
      targetPort: 80
    - name: http2
      protocol: TCP
      port: 85
      targetPort: 3306
